--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 /*style.css*/
 * {box-sizing: border-box;}
-body  { padding-top:80px; word-wrap:break-word; }
+body  { padding-top:40px; word-wrap:break-word; }
 td, th{padding-right: 2em; font-size: 2em;}
 tbody tr:nth-child(odd){background-color: #ccc;}
 /**/
@@ -66,3 +66,5 @@ td.total{text-align: right;}
     tfoot td{text-align: center;}
 
 } /* end media query */
+
+#viz{}
