--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -99,12 +99,12 @@
                             <h2>Add A Coin</h2>
                             <select class="coin form-control"  name="abrv" required>
                               <option class="addCoin">Choose Coin to Add or Update</option>
-                              <option value="BTC">Bitcoin</option>
-                              <option value="ETH">Ethereum</option>
-                              <option value="DASH">DASH</option>
-                              <option value="ZEC">ZCash</option>
-                              <option value="LTC">LiteCoin</option>
-                              <option value="DOGE">DogeCoin</option>
+                              <option value="BTC">Bitcoin <span>BTC</span></option>
+                              <option value="ETH">Ethereum <span>ETH</span></option>
+                              <option value="DASH">DASH <span>Formerly DarkCoin</span></option>
+                              <option value="ZEC">ZCash <span>ZEC</span></option>
+                              <option value="LTC">LiteCoin <span>LTC</span></option>
+                              <option value="DOGE">DogeCoin <span>DOGE</span></option>
                             </select>
 
                         </div>
