--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Node Authentication</title>
+    <title>Home - Bitcoin / Altcoin Portfolio Calc</title>
     <%- include styles.ejs %>
 </head>
 <body>
@@ -12,10 +12,10 @@
         
         <h2>Now with database to remember your info between logins</h2>
 
-        <p>Login or Register with:</p>
+        <p>Login or Signup:</p>
 
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
+        <a href="/login" class="btn btn-success bt-lg"><span class="fa fa-user"></span> Login / Demo Account</a>
+        <a href="/signup" class="btn btn-default bt-lg"><span class="fa fa-user"></span> Signup for a New Account</a>
         
     </div>
     <p><img src="samplePortfolio.gif" alt="Sample Portfolio Screenshot" /></p>
