--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,40 +1,38 @@
 <!doctype html>
 <html>
 <head>
-    <title>Login</title>
+    <title>Login - Bitcoin / Altcoin Portfolio Calc</title>
     <%- include styles.ejs %>
 </head>
 <body>
 <div class="container">
-<div class="col-sm-6 col-sm-offset-3">
+    <div class="col-sm-6 col-sm-offset-3">
 
-    <h1><span class="fa fa-sign-in"></span> Login</h1>
+        <h1><span class="fa fa-sign-in"></span> Login</h1>
 
-    <% if (message.length > 0) { %>
-        <div class="alert alert-danger"><%= message %></div>
-    <% } %>
+        <% if (message.length > 0) { %>
+            <div class="alert alert-danger"><%= message %></div>
+        <% } %>
 
-    <!-- LOGIN FORM -->
-    <form action="/login" method="post">
-        <div class="form-group">
-            <label>Email</label>
-            <input type="text" class="form-control" name="email" value="ab@cd">
-        </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" name="password" value="123">
-        </div>
+        <!-- LOGIN FORM -->
+        <form action="/login" method="post">
+            <div class="form-group">
+                <label>Email</label>
+                <input type="text" class="form-control" name="email" value="ab@cd">
+            </div>
+            <div class="form-group">
+                <label>Password</label>
+                <input type="password" class="form-control" name="password" value="123">
+            </div>
 
-        <button type="submit" class="btn btn-warning btn-lg">Login</button>
-    </form>
+            <button type="submit" class="btn btn-success btn-lg">Login / Demo Account</button>
+        </form>
 
-    <hr>
-
-    <p>Need an account? <a href="/signup">Signup</a></p>
-    <p>Or go <a href="/">home</a>.</p>
+        <p>Need an account? <a href="/signup">Signup</a></p>
+        <p>Or go <a href="/">home</a>.</p>
 
 
-</div>
+    </div>
 </div>
 <!-- insert a script partial -->
 <%- include scripts.ejs %>
