--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Profile</title>
+    <title>Your Profile -  Bitcoin / Altcoin Portfolio Calc</title>
     <%- include styles.ejs %>
 
 </head>
@@ -21,9 +21,6 @@
                 
                 <form id="tableForm">
                      <h2>Coins You Have</h2>
-
-
-                     
 
                      <table class = "prices">
                          <thead>
