--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -96,7 +96,7 @@
                         <% } %>
                         </select>
                     </div>
-                    <button class="refresh btn btn-lg btn-info">Refresh Prices in <span class="yourCurrencyIs"><%= user.cur %></span></button>
+                    <button class="refresh btn btn-lg btn-info">Refresh <span class="yourCurrencyIs"><%= user.cur %></span> Prices </button>
                 <% } %>
                 </form>
 
