added animated gif

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
         <a href="/signup" class="btn btn-default bt-lg"><span class="fa fa-user"></span> Signup for a New Account</a>
         
     </div>
-    <p><img src="samplePortfolio.gif" class="screenshot" alt="Sample Portfolio Screenshot" /></p>
+    <p><img src="node-capstone1024x768_animated.gif" class="screenshot" alt="Sample Portfolio Animated GIF" /></p>
 </div>
 <!-- insert a script partial -->
 <%- include scripts.ejs %>
