--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,10 @@
         <a href="/signup" class="btn btn-default bt-lg"><span class="fa fa-user"></span> Signup for a New Account</a>
         
     </div>
-    <p><img src="node-capstone1024x768_animated.gif" class="screenshot" alt="Sample Portfolio Animated GIF" /></p>
+    <div class="demo">
+        <h2>Watch a 1-minute looping demo:</h2>
+        <p><img src="node-capstone1024x768_animated.gif" class="screenshot" alt="Sample Portfolio Animated GIF" /></p>
+    </div>
 </div>
 <!-- insert a script partial -->
 <%- include scripts.ejs %>
