--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         
     </div>
     <div class="demo">
-        <h2>1-minute looping demo:</h2>
+        <h2>30-second demo loop:</h2>
         <p><img src="node-capstone1024x768_animated.gif" class="screenshot" alt="Sample Portfolio Animated GIF" /></p>
     </div>
 </div>
